fixed issue where footer was covering content

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -19,3 +19,7 @@
     padding: 10px;
     height: 90%;
 }
+
+body {
+    margin-bottom: 10%;
+}
